# alfinin

./: .pylintrc  pyproject.toml
src/: manage.py
src/exemplo/: views.py
src/pokemon/: admin.py  models.py  serializers.py  urls.py  viewsets.py
src/pokemon/migrations/: 0001_initial.py  0002_alter_pokemon_tipo.py  0003_ambiente_pokemon_habitat.py  0005_pokeamb_alter_pokemon_ambientes.py  0006_remove_pokemon_habitat_pokemon_capturado.py
src/zezo/: asgi.py  settings.py  urls.py  wsgi.py
src/zezo/templates/zezo/: page.html
